--- a/Assets/UI Toolkit/Components/AudioMenu/AudioMenu.uss
+++ b/Assets/UI Toolkit/Components/AudioMenu/AudioMenu.uss
@@ -7,7 +7,7 @@
     margin: 20;
 }
 
-.options-menu-button {
+.audio-menu-button {
     color: black;
     background-color: white;
     font-size: 50px;
@@ -15,12 +15,19 @@
     transition: 0.3s ease;
 }
 
-.options-menu-button:hover {
+.audio-menu-button:hover {
     background-color: rgb(221, 221, 221);
     scale: 1.1; /* Increase the size to 110% when hovered */
 }
 
-.options-menu-button:active {
+.audio-menu-button:active {
     background-color: rgb(187, 187, 187);
     scale: 0.9; /* Decrease the size to 90% when pressed */
 }
+
+.audio-settings-slider {
+    font-size: 50px;
+    color: white;
+    width: 100%;
+}
+
