--- a/Assets/UI Toolkit/Components/DisplayMenu/DisplayMenu.uss
+++ b/Assets/UI Toolkit/Components/DisplayMenu/DisplayMenu.uss
@@ -7,7 +7,7 @@
     margin: 20;
 }
 
-.options-menu-button {
+.display-menu-button {
     color: black;
     background-color: white;
     font-size: 50px;
@@ -15,12 +15,19 @@
     transition: 0.3s ease;
 }
 
-.options-menu-button:hover {
+.display-menu-button:hover {
     background-color: rgb(221, 221, 221);
-    scale: 1.1; /* Increase the size to 110% when hovered */
+    scale: 1.1;
 }
 
-.options-menu-button:active {
+.display-menu-button:active {
     background-color: rgb(187, 187, 187);
-    scale: 0.9; /* Decrease the size to 90% when pressed */
+    scale: 0.9;
+}
+
+.display-menu-dropdown-field {
+    font-size: 50px;
+    color: white;
+    width: 100%;
+    margin: 10;
 }
