--- a/Assets/UI Toolkit/Components/OptionsMenu/OptionsMenu.uxml
+++ b/Assets/UI Toolkit/Components/OptionsMenu/OptionsMenu.uxml
@@ -1,13 +1,14 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements"
+<ui:UXML xmlns:ui="UnityEngine.UIElements"
          xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements"
          editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd"
          editor-extension-mode="False">
     <Style
-        src="project://database/Assets/UI%20Toolkit/Components/OptionsMenu/OptionsMenu.uss?fileID=7433441132597879392&amp;guid=6c3274cea32e96d41852ce8d306e7f6f&amp;type=3#OptionsMenu" />
+            src="project://database/Assets/UI%20Toolkit/Components/OptionsMenu/OptionsMenu.uss?fileID=7433441132597879392&amp;guid=6c3274cea32e96d41852ce8d306e7f6f&amp;type=3#OptionsMenu"/>
+    <ui:VisualElement class="buttonsContainer">
+        <ui:Button name="graphicsSettingsButton" text="Graphics Settings" class="options-menu-button"/>
+        <ui:Button name="displaySettingsButton" text="Display Settings" class="options-menu-button"/>
+        <ui:Button name="audioSettingsButton" text="Audio Settings" class="options-menu-button"/>
 
-    <ui:Button name="graphicsSettingsButton" text="Graphics Settings" class="options-menu-button"/>
-    <ui:Button name="displaySettingsButton" text="Display Settings" class="options-menu-button"/>
-    <ui:Button name="soundSettingsButton" text="Sound Settings" class="options-menu-button"/>
-
-    <ui:Button name="backButton" text="Back" class="options-menu-button"/>
+        <ui:Button name="backButton" text="Back" class="options-menu-button"/>
+    </ui:VisualElement>
 </ui:UXML>
