--- a/Assets/UI Toolkit/Components/In-Game/In-Game.uxml
+++ b/Assets/UI Toolkit/Components/In-Game/In-Game.uxml
@@ -4,9 +4,12 @@
          editor-extension-mode="False">
     <ui:Template name="ConnectMenu"
                  src="project://database/Assets/UI%20Toolkit/Components/In-Game/ConnectMenu/ConnectMenu.uxml?fileID=9197481963319205126&amp;guid=d03119661faccee46af5ad0f796da0a9&amp;type=3#ConnectMenu" />
+    <ui:Template name="ConnectedMenu"
+                 src="project://database/Assets/UI%20Toolkit/Components/In-Game/ConnectedMenu/ConnectedMenu.uxml?fileID=9197481963319205126&amp;guid=28abc6943d35b224b800228d5554399d&amp;type=3#ConnectedMenu" />
     <Style
         src="project://database/Assets/UI%20Toolkit/Components/In-Game/In-Game.uss?fileID=7433441132597879392&amp;guid=15334390ee96ab64ebf800c03f36be12&amp;type=3#In-Game" />
     <ui:VisualElement class="background">
         <ui:Instance template="ConnectMenu" name="ConnectMenu" />
+        <ui:Instance template="ConnectedMenu" name="ConnectedMenu" style="display: none;" />
     </ui:VisualElement>
 </ui:UXML>
