Update UI styling and functionality and added a back button for both ingame menus

--- a/Assets/UI Toolkit/Components/In-Game/ConnectedMenu/ConnectedMenu.uxml
+++ b/Assets/UI Toolkit/Components/In-Game/ConnectedMenu/ConnectedMenu.uxml
@@ -6,9 +6,11 @@
         src="project://database/Assets/UI%20Toolkit/Components/In-Game/ConnectedMenu/ConnectedMenu.uss?fileID=7433441132597879392&amp;guid=2d93304e26fa02447aa865e044e3421e&amp;type=3#ConnectedMenu" />
     <Style
         src="project://database/Assets/UI%20Toolkit/Components/In-Game/In-Game.uss?fileID=7433441132597879392&amp;guid=15334390ee96ab64ebf800c03f36be12&amp;type=3#In-Game" />
-    <ui:VisualElement class="background">
+    <ui:VisualElement class="background buttonsContainer">
         <ui:Label name="roomCodeLabel" class="menu-label" />
         <ui:Button name="copyRoomCodeButton" text="Copy Room Code" class="menu-button" />
         <ui:Button name="startMatchButton" text="Start Match" class="menu-button" style="display: none;" />
+        <ui:VisualElement class="spacer"/>
+        <ui:Button name="leaveButton" text="Leave" class="menu-button" />
     </ui:VisualElement>
 </ui:UXML>
