--- a/Assets/UI Toolkit/Components/In-Game/WeaponUI/WeaponUI.uxml
+++ b/Assets/UI Toolkit/Components/In-Game/WeaponUI/WeaponUI.uxml
@@ -1,12 +1,17 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement style="flex-grow: 1; align-items: center; justify-content: center;">
+    <ui:VisualElement style="align-items: center; justify-content: center; flex-grow: 1;">
         <ui:VisualElement style="align-self: center;">
-            <ui:VisualElement style="width: 50px; height: 50px;">
-                <ui:VisualElement name="Left" style="background-color: rgb(255, 255, 255); width: 15px; height: 5px; top: 50%; position: absolute; left: 0; translate: 0 -2.5px;" />
-                <ui:VisualElement name="Top" style="background-color: rgb(255, 255, 255); width: 5px; height: 15px; position: absolute; left: 50%; top: 0; translate: -2.5px 0;" />
-                <ui:VisualElement name="Right" style="background-color: rgb(255, 255, 255); width: 15px; height: 5px; top: 50%; position: absolute; right: 0; translate: 0 -2.5px;" />
-                <ui:VisualElement name="Bottom" style="background-color: rgb(255, 255, 255); width: 5px; height: 15px; left: 50%; position: absolute; bottom: 0; translate: -2.5px 0;" />
+            <ui:VisualElement name="Crosshair" style="width: 30px; height: 30px;">
+                <ui:VisualElement name="Left" style="background-color: rgb(255, 255, 255); width: 10px; height: 5px; top: 50%; position: absolute; left: 0; translate: 0 -2.5px;" />
+                <ui:VisualElement name="Top" style="background-color: rgb(255, 255, 255); width: 5px; height: 10px; position: absolute; left: 50%; top: 0; translate: -2.5px 0;" />
+                <ui:VisualElement name="Right" style="background-color: rgb(255, 255, 255); width: 10px; height: 5px; top: 50%; position: absolute; right: 0; translate: 0 -2.5px;" />
+                <ui:VisualElement name="Bottom" style="background-color: rgb(255, 255, 255); width: 5px; height: 10px; left: 50%; position: absolute; bottom: 0; translate: -2.5px 0;" />
             </ui:VisualElement>
         </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement style="flex-grow: 1; position: absolute; flex-direction: row; background-color: rgba(0, 0, 0, 0.76); bottom: 0; right: 0; margin-top: 51px; margin-right: 51px; margin-bottom: 51px; margin-left: 51px;">
+        <ui:Label tabindex="-1" text="0" parse-escape-sequences="true" display-tooltip-when-elided="true" name="AmmoLeft" style="color: rgb(255, 255, 255); font-size: 50px; margin-top: 7px; margin-right: 7px; margin-bottom: 7px; margin-left: 14px; padding-top: 7px; padding-right: 7px; padding-bottom: 7px; padding-left: 14px;" />
+        <ui:Label tabindex="-1" text="|" parse-escape-sequences="true" display-tooltip-when-elided="true" name="MiddlePiece" style="color: rgb(255, 255, 255); font-size: 50px; margin-top: 7px; margin-right: 7px; margin-bottom: 7px; margin-left: 7px; padding-top: 7px; padding-right: 7px; padding-bottom: 7px; padding-left: 7px;" />
+        <ui:Label tabindex="-1" text="6" parse-escape-sequences="true" display-tooltip-when-elided="true" name="MaxAmmo" style="color: rgb(255, 255, 255); font-size: 50px; margin-top: 7px; margin-right: 14px; margin-bottom: 7px; margin-left: 7px; padding-top: 7px; padding-right: 14px; padding-bottom: 7px; padding-left: 7px;" />
     </ui:VisualElement>
 </ui:UXML>
