chore: Update audio menu and display menu styles and layout

--- a/Assets/UI Toolkit/Components/Menu/OptionsMenu/AudioMenu/AudioMenu.uxml
+++ b/Assets/UI Toolkit/Components/Menu/OptionsMenu/AudioMenu/AudioMenu.uxml
@@ -2,9 +2,18 @@
     <Style src="project://database/Assets/UI%20Toolkit/Components/Menu/OptionsMenu/AudioMenu/AudioMenu.uss?fileID=7433441132597879392&amp;guid=9813a727d8adc0e49a7705a17f0ddd4e&amp;type=3#AudioMenu" />
     <Style src="project://database/Assets/UI%20Toolkit/Components/Menu/Menu.uss?fileID=7433441132597879392&amp;guid=e300c84a7d388e344a2a94cc82fc7ce0&amp;type=3#Menu" />
     <ui:VisualElement class="buttonsContainer">
-        <ui:Slider name="masterVolumeSlider" label="Master Volume" high-value="0" low-value="-80" class="menu-slider" />
-        <ui:Slider name="sfxVolumeSlider" label="Sfx Volume" high-value="0" low-value="-80" class="menu-slider" />
-        <ui:Slider name="musicVolumeSlider" label="Music Volume" high-value="0" low-value="-80" class="menu-slider" />
+        <ui:VisualElement class="menu-slider" style="flex-direction: row; justify-content: space-between;">
+            <ui:Label text="Master Volume" />
+            <ui:Slider name="masterVolumeSlider" high-value="0" low-value="-80" class="menu-slider" style="width: 60%;" />
+        </ui:VisualElement>
+        <ui:VisualElement class="menu-slider" style="flex-direction: row; justify-content: space-between;">
+            <ui:Label text="Sfx Volume" />
+            <ui:Slider name="sfxVolumeSlider" high-value="0" low-value="-80" class="menu-slider" style="width: 60%;" />
+        </ui:VisualElement>
+        <ui:VisualElement class="menu-slider" style="flex-direction: row; justify-content: space-between;">
+            <ui:Label text="Music Volume" />
+            <ui:Slider name="musicVolumeSlider" high-value="0" low-value="-80" class="menu-slider" style="width: 60%;" />
+        </ui:VisualElement>
         <ui:Button name="backButton" text="Back" class="menu-button" />
     </ui:VisualElement>
 </ui:UXML>
